add travis and fastlane

--- a/CITest/Info.plist
+++ b/CITest/Info.plist
@@ -17,7 +17,21 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2018.09.13.21:38</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>7102dec9570d5d105df6c94a17fc981beef883ea</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
