--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ podfile: CITest/Podfile
 
 before_install:
   echo -e "machine github.com\n  login $CI_USER_TOKEN" >> ~/.netrc
-  - gem install cocoapods # Since Travis is not always on latest version
+  #- gem install cocoapods # Since Travis is not always on latest version
   - pod install --project-directory=CITest
 
 script:
